syntax = "proto3";

package sbai_std_protos;

message String {
    string data = 1;
}
